- Mutually recursive structural methods allowed.
- Mutually recursive type definitions allowed.


# Focalize 0.9.2
################

- Zenon Modulo is now used instead of Zenonide for Dedukti output so
  proofs can now benefit from deduction modulo.
- Sukerujo is used instead of the regular Dedukti parser so that
  integer and string literals can be printed in a readable manner and
  local let binding is available on the Dedukti side.
- Support for pattern matching and algebraic datatypes in Dedukti
  backend has been improved.
- Support for recursive definitions in Dedukti backend has benn
  developped.
- The targeted Dedukti version has been updated to v2.4
- Various bug fixes

# Focalize 0.9.1
################

- Termination proofs by measure and by order.
- Termination proofs (order/measure) now typechecked correctly.
  Before, there was no verification on the expression used as order or measure,
  and on the argument's type used.
- Fixed exception not handled (turned in an error message) for decreasing
  ident not a function argument in termination proofs.
- Order relations on orders are not anymore called <0x, <=0x etc, but simply
  <, <= etc.
- Simplifications in the generated code for collections. Use of implicit
  arguments in right number instead of full types/expression. Makes the
  generated code shorter and more readable.
- Don't require Zenon source code to be present in a zenon subfolder
- Fixed bug in the parser causing collision between documentation comments
  and delimited identifiers.
- New Dedukti back-end as logical target language (in development). Only
  active using the --experimental option.
- Adapt to Coq >= 8.5.
- Misc buf fixes (68, 69, 70, 71, 72, 73, 74, 75, 76).


# Focalize 0.9.0
################
- Update to Caml 4.02.0
- Update to Coq 8.4pl4
- New contruct "final let" to prevent redefinition by inheritance
- Script to transform FocDoc to HTML (fcd2html.sh)
- Emacs mode (pretty basic)