@@ -137,3 +137,5 @@
 %\newenvironment{links}
 %{\setenvclass{itemize}{ftoc2}\setenvclass{li-itemize}{li-links}\itemize}
 %{\enditemize}
+
+\def{\TODO}[1]{{\bf {\color{red}#1}}}
