@@ -127,3 +127,5 @@
      \setlength{\parsep}{0pt}}
 {\end{enumerate}
 }
+
+\newcommand{\TODO}[1]{{\color{red}{#1}}}
