@@ -1,5 +1,9 @@
 - Mutually recursive structural methods allowed.
 - Mutually recursive type definitions allowed.
+- Multiple structural termination proofs for mutually recursive functions.
+- Fix missing lambda-liftings in some mutually recursive functions.
+- ANSI escape sequences in error/warning messages are no more used when the
+  compilation is not triggered from a terminal.
 
 
 # Focalize 0.9.2
